refactoring Dice